ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncSetter_es5/input.ts.stderr
error[1042]: `async` modifier cannot be used here.
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncSetter_es5/input.ts:5:3
  |
5 |   async set foo(value) {
  |   ^^^^^

